# postgres-msp

./: .dockerignore  .gitignore  1.txt  2.txt  CHANGES_README.md  CLAUDE.md  Dockerfile  Dockerfile-en  LICENSE  PROJECT_STATUS.md  README.md  devenv-all.yaml  devenv-en.nix  devenv-en.yaml  devenv.nix  devenv.yaml  docker-compose.yml  docker-entrypoint.sh  import.py  mcp_config.json  postgres-mcp-all-in-one.sh  pyproject-en.toml  pyproject.toml  requirements.txt  run_mcp_auto.cmd  run_ui.cmd  smithery.yaml  sql_history.json  start.cmd  structure.txt
.github/workflows/: build.yml
Docker/: Build Docker.md
config/: prompts.yaml  providers.yaml  ui_settings.yaml
examples/: movie-app-rus.md
src/: .gitignore  Dockerfile  README.md  docker-compose.yml  mcp_config.json  pyproject.toml  requirements.txt
src/postgres_mcp/: artifacts.py  host-latest-24-06-2025-12-30_.py  host-latest.py  server.py
src/postgres_mcp/autonomous/: app.py  connection_store.py  crypto.py  llm_client.py  llm_connection_store.py  mcp_server.py  pg_client.py
src/postgres_mcp/database_health/: __init__.py  buffer_health_calc.py  connection_health_calc.py  constraint_health_calc.py  database_health.py  index_health_calc.py  replication_calc.py  sequence_health_calc.py  vacuum_health_calc.py
src/postgres_mcp/explain/: README.md  __init__.py  explain_plan.py
src/postgres_mcp/index/: dta_calc.py  index_opt_base.py  llm_opt.py  presentation.py
src/postgres_mcp/sql/: __init__.py  bind_params.py  extension_utils.py  index.py  safe_sql.py  sql_driver.py
src/postgres_mcp/sql_editor/: __init__.py  builder.py  history.py  templates.py
src/postgres_mcp/top_queries/: __init__.py  top_queries_calc.py
tests/: conftest.py  utils.py
tests/integration/: test_top_queries_integration.py
tests/unit/: test_access_mode.py
tests/unit/database_health/: test_database_health_tool.py
tests/unit/explain/: test_explain_plan.py  test_server_integration.py
tests/unit/index/: test_dta_calc.py
tests/unit/sql/: test_readonly_enforcement.py  test_safe_sql.py
tests/unit/top_queries/: test_top_queries_calc.py
