[project]
name = "my-project"
version = "0.1.0"
description = "Проект с автоматически сгенерированными зависимостями"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.26.0",
    "anyio>=4.6.0",
    "async-timeout>=4.0.3",
    "attrs>=24.1.0",
    "babel>=2.12.1",
    "bcrypt>=4.3.0",
    "boto3>=1.34.98",
    "botocore>=1.34.98",
    "cachetools>=5.4.0",
    "certifi>=2024.7.4",
    "cffi>=1.16.1",
    "charset-normalizer>=3.3.2",
    "click>=8.1.7",
    "cloudpickle>=3.0.0",
    "colorama>=0.4.6",
    "comm>=0.1.4",
    "concurrent-log-handler>=0.9.2",
    "configparser>=5.3.1",
    "contextlib2>=21.6.0",
    "coverage>=7.5.0",
    "cryptography>=43.0.3",
    "cycler>=0.12.1",
    "dataclasses-json>=0.6.7",
    "devenv>=0.1.0",
    "docker>=7.0.1",
    "docstring-parser>=0.26.1",
    "dotenv>=0.1.0",
    "email-validator>=2.1.1",
    "fastapi>=0.112.2",
    "fastjsonschema>=2.21.0",
    "fastmcp>=0.1.0",
    "filelock>=3.9.2",
    "fireworks>=1.1.0",
    "fonttools>=4.43.1",
    "frozenlist>=1.4.1",
    "fsspec>=2024.6.1",
    "gast>=0.4.0",
    "gevent>=24.2.1",
    "gigachat>=0.2.0",
    "google-api-core>=2.12.0",
    "google-auth>=2.29.0",
    "googleapis-common-protos>=1.6.0",
    "grpcio>=1.64.1",
    "gunicorn>=21.2.0",
    "h11>=0.14.0",
    "httpcore>=1.0.5",
    "httpx>=0.27.2",
    "huggingface-hub>=0.25.0",
    "hydra-core>=1.3.2",
    "idna>=3.7",
    "imageio>=2.34.0",
    "importlib-metadata>=7.2.1",
    "iniconfig>=2.0.0",
    "ipykernel>=6.27.0",
    "ipython>=8.25.0",
    "ipywidgets>=8.1.3",
    "isoduration>=2.2.1",
    "itsdangerous>=2.2.0",
    "jedi>=0.19.1",
    "jeepney>=0.8.2",
    "jinja2>=3.1.4",
    "joblib>=1.4.2",
    "jsonpatch>=1.34",
    "jsonpointer>=2.4",
    "jsonschema>=4.21.1",
    "jupyter-client>=8.6.2",
    "jupyter-core>=5.7.2",
    "jupyter-server>=2.13.1",
    "jupyterlab>=4.2.5",
    "jupyterlab-pygments>=0.3.0",
    "jupyterlab-server>=2.28.0",
    "keras>=3.6.0",
    "kiwisolver>=1.4.5",
    "langchain>=0.2.6",
    "langchain-community>=0.2.5",
    "langchain-core>=0.2.7",
    "langchain-gigachat>=0.0.3",
    "langchain-openai>=0.1.9",
    "langgraph>=0.1.17",
    "lazy-loader>=0.2",
    "libcst>=0.4.2",
    "libclang>=17.0.1",
    "lightgbm>=4.4.0",
    "litestar>=2.10.0",
    "llvmlite>=0.43.0",
    "logging-color-formatter>=1.0.0",
    "markdown-it-py>=3.0.0",
    "markupsafe>=2.1.5",
    "matplotlib>=3.9.2",
    "matplotlib-inline>=0.1.6",
    "mdurl>=0.1.2",
    "mistune>=3.0.1",
    "mkdocs>=1.5.3",
    "ml-dtypes>=0.4.0",
    "mock>=5.1.0",
    "multidict>=6.0.5",
    "mypy>=1.12.0",
    "mypy-boto3-s3>=1.26.0.post0",
    "mysql-connector-python>=8.2.0",
    "natsort>=8.4.0",
    "nbclient>=0.8.0",
    "nbconvert>=7.16.1",
    "nbformat>=5.9.2",
    "nest-asyncio>=1.6.0",
    "networkx>=3.3",
    "notebook>=7.2.1",
    "notebook_shim>=0.2.4",
    "numba>=0.60.0",
    "numpy>=2.1.3",
    "oauthlib>=3.2.2",
    "opencv-python>=4.9.0.80",
    "opt-einsum>=3.3.0",
    "orjson>=3.10.10",
    "packaging>=24.1",
    "pandas>=2.2.3",
    "pandocfilters>=1.5.1",
    "parso>=0.8.3",
    "pathspec>=0.11.2",
    "pexpect>=4.9.0",
    "phik>=0.13.4",
    "pickleshare>=0.7.5",
    "Pillow>=10.4.0",
    "pipreqs>=0.4.13",
    "pkgutil-resolve-name>=1.3.3",
    "platformdirs>=4.2.4",
    "plotly>=5.24.0",
    "pluggy>=1.5.0",
    "prometheus-client>=0.16.1",
    "prompt-toolkit>=3.0.43",
    "protobuf>=4.22.3",
    "psutil>=6.1.0",
    "psycopg>=3.2.1",
    "psycopg2-binary>=2.9.9",
    "py>=1.11.0",
    "py-cpuinfo>=9.0.0",
    "pyarrow>=16.1.0",
    "pyasn1>=0.5.1",
    "pyasn1-modules>=0.4.7",
    "pybind11>=2.12.0",
    "pycairo>=1.26.1",
    "pydantic>=2.9.2",
    "pydantic-extra-types>=2.0.0",
    "pydantic-settings>=2.4.0",
    "pydeck>=0.8.1",
    "pydot>=1.4.2",
    "pydub>=0.25.1",
    "pyerfa>=2.0.1",
    "pygobject>=3.42.1",
    "pyjwt>=2.8.0",
    "pylint>=3.2.4",
    "pyls-spyder>=0.4.0",
    "pynvml>=11.5.0",
    "pyopenssl>=23.4.0",
    "pyparsing>=3.1.2",
    "pyperclip>=1.8.2",
    "pyppeteer>=1.0.2",
    "pyqt5>=5.15.10",
    "pyqt5-sip>=4.19.18",
    "pyqtwebengine>=5.15.5",
    "pysocks>=1.7.1",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.22.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.1",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.6",
    "python-slugify>=8.0.1",
    "pytz>=2024.1",
    "pyvisa>=1.16.0",
    "pyvisa-py>=0.6.0",
    "pyyaml>=6.0.1",
    "pyzmq>=25.1.0",
    "qdldl>=0.1.6",
    "regex>=2024.7.4",
    "requests>=2.32.3",
    "rich>=13.7.1",
    "rsa>=4.9",
    "ruamel.yaml>=0.17.21",
    "ruamel.yaml.clib>=0.2.8",
    "s3transfer>=0.10.1",
    "scikit-learn>=1.5.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "semantic-version>=2.10.0",
    "sentence-transformers>=2.2.0",
    "setuptools>=69.1.1",
    "shapely>=2.0.5",
    "shortuuid>=1.0.13",
    "sip>=6.7.1",
    "six>=1.16.0",
    "sklearn>=0.0.post5",
    "sniffio>=1.3.1",
    "snowflake>=0.0.4",
    "sortedcontainers>=2.4.0",
    "sounddevice>=0.4.6",
    "soupsieve>=2.5",
    "sparkmagic>=0.18.0",
    "spacy>=3.7.5",
    "sphinx>=7.3.7",
    "sphinxcontrib-applehelp>=1.0.2",
    "sphinxcontrib-devhelp>=1.0.2",
    "sphinxcontrib-htmlhelp>=2.0.1",
    "sphinxcontrib-qthelp>=1.0.3",
    "sphinxcontrib-serializinghtml>=1.1.5",
    "sphinxext-opengraph>=0.11.0",
    "spyder-kernels>=2.5.0",
    "sqlalchemy>=2.0.36",
    "sse-starlette>=1.8.0",
    "starlette>=0.37.2",
    "statsmodels>=0.14.2",
    "sympy>=1.12.1",
    "tbb>=0.1",
    "tblib>=1.7.0",
    "tenacity>=8.2.3",
    "tensorboard>=2.16.2",
    "tensorflow>=2.16.1",
    "termcolor>=2.4.0",
    "terminado>=0.18.0",
    "testpath>=0.7.0",
    "text-unidecode>=1.3",
    "threadpoolctl>=3.5.0",
    "tifffile>=2024.7.24",
    "tokenizers>=0.19.1",
    "torch>=2.3.1",
    "torchaudio>=2.3.1",
    "torchvision>=0.18.1",
    "tornado>=6.3.3",
    "tqdm>=4.66.5",
    "traitlets>=5.14.0",
    "transformers>=4.41.2",
    "typing_extensions>=4.12.2",
    "ujson>=5.10.0",
    "urllib3>=2.2.2",
    "uvicorn>=0.29.0",
    "uvloop>=0.19.0",
    "wasabi>=0.11.1",
    "watchdog>=5.0.1",
    "wcwidth>=0.2.13",
    "websockets>=10.4",
    "werkzeug>=3.0.3",
    "wheel>=0.43.0",
    "widgetsnbextension>=4.0.12",
    "wikipedia>=1.4.0",
    "win-inet-pton>=1.1.0",
    "wincertstore>=0.2",
    "wrapt>=1.16.0",
    "xarray>=2024.6.0",
    "xgboost>=2.1.1",
    "xz>=1.0",
    "yaml>=0.2.5",
    "yapf>=0.31.1",
    "yarl>=1.9.4",
    "zipp>=3.17.0",
    "zstandard>=0.22.0",
    "gradio>=5.0.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0"
]

[build-system]
requires = ["setuptools>=69.1.1", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"